# Projektas

./: .gitignore  README.md
TreciaPrograma/: CMakeLists.txt
